--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "gulp-concat": "^2.6.1",
         "gulp-if": "^3.0.0",
         "gulp-sourcemaps": "^3.0.0",
-        "gulp-uglifyjs": "^0.6.2"
+        "gulp-uglifyjs": "^0.6.2",
+        "gulp-webp": "^4.0.1"
     },
     "dependencies": {
         "jquery": "^3.6.0",
